// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/DateSeparator should render date with timezone enabled 1`] = `
<DateSeparator
  date={2018-01-12T20:15:13.000Z}
  enableTimezone={true}
  timeZone="Australia/Sydney"
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
      data-testid="basicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <injectIntl(RecentDate)
          day="2-digit"
          month="short"
          timeZone="Australia/Sydney"
          value={2018-01-12T20:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          <RecentDate
            day="2-digit"
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatDateToParts": [Function],
                "formatHTMLMessage": [Function],
                "formatList": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatNumberToParts": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "formatTimeToParts": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getListFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralRules": [Function],
                  "getRelativeTimeFormat": [Function],
                },
                "locale": "en",
                "messages": Object {},
                "onError": [Function],
                "textComponent": "span",
                "timeZone": "Etc/UTC",
              }
            }
            month="short"
            timeZone="Australia/Sydney"
            value={2018-01-12T20:15:13.000Z}
            weekday="short"
            year="numeric"
          >
            Sat, Jan 13, 2018
          </RecentDate>
        </injectIntl(RecentDate)>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;

exports[`components/post_view/DateSeparator should render date without timezone 1`] = `
<DateSeparator
  date={2018-01-12T08:15:13.000Z}
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
      data-testid="basicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <injectIntl(RecentDate)
          day="2-digit"
          month="short"
          value={2018-01-12T08:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          <RecentDate
            day="2-digit"
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatDateToParts": [Function],
                "formatHTMLMessage": [Function],
                "formatList": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatNumberToParts": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "formatTimeToParts": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getListFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralRules": [Function],
                  "getRelativeTimeFormat": [Function],
                },
                "locale": "en",
                "messages": Object {},
                "onError": [Function],
                "textComponent": "span",
                "timeZone": "Etc/UTC",
              }
            }
            month="short"
            value={2018-01-12T08:15:13.000Z}
            weekday="short"
            year="numeric"
          >
            Fri, Jan 12, 2018
          </RecentDate>
        </injectIntl(RecentDate)>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;

exports[`components/post_view/DateSeparator should render date without timezone enabled 1`] = `
<DateSeparator
  date={2018-01-12T08:15:13.000Z}
  enableTimezone={false}
  timeZone="New Zealand/Auckland"
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
      data-testid="basicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <injectIntl(RecentDate)
          day="2-digit"
          month="short"
          value={2018-01-12T08:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          <RecentDate
            day="2-digit"
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatDateToParts": [Function],
                "formatHTMLMessage": [Function],
                "formatList": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatNumberToParts": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "formatTimeToParts": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getListFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralRules": [Function],
                  "getRelativeTimeFormat": [Function],
                },
                "locale": "en",
                "messages": Object {},
                "onError": [Function],
                "textComponent": "span",
                "timeZone": "Etc/UTC",
              }
            }
            month="short"
            value={2018-01-12T08:15:13.000Z}
            weekday="short"
            year="numeric"
          >
            Fri, Jan 12, 2018
          </RecentDate>
        </injectIntl(RecentDate)>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;
